--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 		<script type="module" src="./assets/scripts/mainPage.js" defer></script>
 		<title>Camden</title>
 	</head>
-	<body id="mainPage" class="mainPage">
+	<body id="mainPage" class="mainPage" v-cloak>
 		<header>
 			<div class="header__container">
 				<div class="header__content">
 					<div class="logo">
-						<a href="/Camden/index.html"><img src="./assets/imgs/logo.png" alt="logo" /></a>
+						<a href="/index.html"><img src="./assets/imgs/logo.png" alt="logo" /></a>
+						<!-- <a href="/index.html"><img src="./assets/imgs/logo.png" alt="logo" /></a> -->
 					</div>
 				</div>
 			</div>
@@ -35,20 +36,18 @@
 						<p>Use this tool to learn more about Camden schools</p>
 						<div class="hero__tab tab-hero">
 							<div class="tab__top">
-								<p class="tab__title">Who are Camden Learning?</p>
+								<p class="tab__title">What is a school report?</p>
 								<div class="tab__close">
 									<img src="./assets/imgs/close-tab.svg" alt="" />
 								</div>
 							</div>
 							<div class="tab__content">
 								<p class="tab__text">
-									Lorem ipsum dolor sit amet consectetur. Non pharetra vitae mi neque risus id id vitae. Egestas mattis porta et
-									ut gravida. Id ac tellus pulvinar ante cras fermentum. Suspendisse vestibulum sit aliquam pretium nisi sit.
-									Imperdiet quis non.
+									This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden Learning as providing a true and fair picture of the school.
 								</p>
-								<p class="tab__text link">
+								<!-- <p class="tab__text link">
 									<img src="./assets/imgs/browser-icon.png" alt="" /> <a href="">View Camden learning website</a>
-								</p>
+								</p> -->
 							</div>
 						</div>
 					</div>
@@ -60,21 +59,21 @@
 						<div class="schools-info__filter schools-filter">
 							<div class="schools-filter__input">
 								<img src="./assets/imgs/search-icon.png" alt="search" />
-								<input id="searchSchoolInput" placeholder="Search by name or postcode" type="text" />
+								<input id="searchSchoolInput" placeholder="Search by name or school postcode" type="text" />
 							</div>
-							<div class="schools-filter__button"><img src="./assets/imgs/tune.png" alt="tune" /></div>
+							<!-- <div class="schools-filter__button"><img src="./assets/imgs/tune.png" alt="tune" /></div> -->
 						</div>
 						<div class="schools-info__list schools-list">
 							<div v-for="school in schools" class="schools-list_item school-item">
 								<div class="school-item__header">
-									<img src="./assets/imgs/school-logo.png" alt="school-logo" />
+									<img :src="`${school.schoolLogo}`" alt="school-logo" />
 									<h4 class="school-item__name">{{school.schoolName}}</h4>
 								</div>
-								<p class="school-itemy__description">{{school.shortSlogan}}</p>
+								<p class="school-itemy__description" v-html="school.shortSlogan"></p>
 								<div class="school-item__info-row info-row">
 									<div class="info-row__item">
 										<p>Age Range</p>
-										<span>{{school.ageRange}}</span>
+										<span>{{school.ageRange[0]}}-{{school.ageRange[1]}}</span>
 									</div>
 									<div class="info-row__item">
 										<p>School Type</p>
@@ -87,10 +86,14 @@
 								</div>
 
 								<div class="school-item__footer">
-									<a class="link" :href="`/Camden/school/index.html?schoolId=${school.schoolId}`">
+									<a class="link" :href="`/school/index.html?schoolId=${school.schoolId}`">
 										<span>View school details</span>
 										<img src="./assets/imgs/arrow-outward.png" alt="arrow" />
 									</a>
+									<!-- <a class="link" :href="`/school/index.html?schoolId=${school.schoolId}`">
+										<span>View school details</span>
+										<img src="./assets/imgs/arrow-outward.png" alt="arrow" />
+									</a> -->
 								</div>
 							</div>
 							<!-- <div class="schools-list_item school-item">
@@ -196,19 +199,22 @@
 									<div class="overlay__age-range age-range">
 										<input type="range" class="age-range-input" min="4" max="18" value="4" />
 										<div class="age-range__values">
-											<span class="minValue">4</span>
-											<span class="maxValue">18</span>
+											<span class="minValue">{{filterOverlayData.ageRange[0]}}</span>
+											<span class="maxValue">{{filterOverlayData.ageRange[1]}}</span>
 										</div>
 									</div>
 								</div>
 								<div class="overlay-main__sector sector">
 									<p class="sector__title">School Type</p>
-									<div class="sector-params-block">
-										<button class="filter-checkbox">
+									<div class="sector-params-block school-type-filters">
+										<button
+											v-for="schoolType in filterOverlayData.schoolTypes"
+											:filter-param="schoolType"
+											class="filter-checkbox">
 											<input class="filter-checkbox" type="checkbox" name="" id="" />
-											<p>Roman Catholic</p>
+											<p>{{schoolType}}</p>
 										</button>
-										<button class="filter-checkbox">
+										<!-- <button class="filter-checkbox">
 											<input class="filter-checkbox" type="checkbox" name="" id="" />
 											<p>Church of England</p>
 										</button>
@@ -219,39 +225,34 @@
 										<button class="filter-checkbox">
 											<input class="filter-checkbox" type="checkbox" name="" id="" />
 											<p>Alternative Provision</p>
-										</button>
-
-										<button class="filter-checkbox">
-											<input class="filter-checkbox" type="checkbox" name="" id="" />
-											<p>etc</p>
-										</button>
+										</button> -->
 									</div>
 								</div>
 								<div class="overlay-main__sector sector">
 									<p class="sector__title">Sex</p>
-									<div class="sector-params-block sector-params-block-row">
-										<button class="filter-checkbox">
+									<div class="sector-params-block sector-params-block-row genders-filters">
+										<button v-for="gender in filterOverlayData.genders" :filter-param="gender" class="filter-checkbox">
 											<input class="filter-checkbox" type="checkbox" name="" id="" />
-											<p>Mixed</p>
+											<p>{{gender}}</p>
 										</button>
-										<button class="filter-checkbox">
+										<!-- <button class="filter-checkbox">
 											<input class="filter-checkbox" type="checkbox" name="" id="" />
 											<p>Boys Only</p>
 										</button>
 										<button class="filter-checkbox">
 											<input class="filter-checkbox" type="checkbox" name="" id="" />
 											<p>Girls Only</p>
-										</button>
+										</button> -->
 									</div>
 								</div>
-								<div class="overlay-main__sector sector">
+								<!-- <div class="overlay-main__sector sector">
 									<p class="sector__title">Facilities</p>
-									<div class="sector-params-block">
-										<button class="filter-checkbox">
+									<div class="sector-params-block facilities-filter">
+										<button v-for="facility in filterOverlayData.facilities" :filter-param="facility" class="filter-checkbox">
 											<input class="filter-checkbox" type="checkbox" name="" id="" />
-											<p>Swimming Pool</p>
+											<p>{{facility}}</p>
 										</button>
-										<button class="filter-checkbox">
+										<!-- <button class="filter-checkbox">
 											<input class="filter-checkbox" type="checkbox" name="" id="" />
 											<p>Tennis Courts</p>
 										</button>
@@ -274,14 +275,14 @@
 										<button class="filter-checkbox">
 											<input class="filter-checkbox" type="checkbox" name="" id="" />
 											<p>Science Labs</p>
-										</button>
+										</button> -->
 									</div>
 								</div>
 							</div>
-							<div class="filter-overlay__footer">
+							<!-- <div class="filter-overlay__footer">
 								<button class="filter-overlay__button filter-clear button-no-bg">Clear filters</button>
 								<button class="filter-overlay__button filter-accept button-with-bg">Show filtered schools</button>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
