--- a/school/index.html
+++ b/school/index.html
@@ -10,6 +10,7 @@
 			rel="stylesheet" />
 		<link rel="stylesheet" href="../assets/styles/global.css" />
 		<link rel="stylesheet" href="../assets/styles/components/header.css" />
+		<link rel="stylesheet" href="../assets/styles/components/footer.css" />
 		<link rel="stylesheet" href="../assets/styles/pages/school.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 		<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -18,13 +19,14 @@
 
 		<title>School</title>
 	</head>
-	<body id="schoolPage" class="schoolPage">
-		<header>
+	<body v-cloak id="schoolPage" class="schoolPage">
+		<header class="header__school">
 			<div class="header__container">
 				<div class="header__content">
-					<div class="logo">
-						<a href="/Camden/index.html"><img src="../assets/imgs/logo.png" alt="logo" /></a>
+					<div class="school__logo">
+						<img :src="`${school.schoolLogo}`" alt="logo">
 					</div>
+					<!-- <h1 class="school__name">{{school.schoolName}}</h1> -->
 				</div>
 			</div>
 		</header>
@@ -34,14 +36,14 @@
 					<div class="hero__content">
 						<div class="hero-title__block">
 							<h1 class="hero__title">{{school.schoolName}}</h1>
-							<div class="hero_share"><span>Share</span><img src="../assets/imgs/share.png" alt="" /></div>
+							<!-- <div class="hero_share"><span>Share</span><img src="../assets/imgs/share.png" alt="" /></div> -->
 						</div>
 						<p class="hero__address">{{school.address}} {{school.postCode}}</p>
-						<p class="hero__description">{{school.shortSlogan}}</p>
+						<p class="hero__description" v-html="school.shortSlogan"></p>
 						<div class="hero__information">
 							<div class="information__item">
 								<p>Age Range</p>
-								<span>{{school.ageRange}}</span>
+								<span>{{school.ageRange[0]}}-{{school.ageRange[1]}}</span>
 							</div>
 							<div class="information__item">
 								<p>School Type</p>
@@ -58,10 +60,23 @@
 			<section class="about">
 				<div class="about__container">
 					<div class="about__content">
+						<div class="about__report tabs-block">
+							<div v-if="school?.aboutReportCard" class="tabs-block__item tab">
+								<div class="tab__top">
+									<div class="tab__icon"> 
+										<img src="../assets/imgs/info-icon.png" alt="" />
+									</div>
+									<p class="tab__title">What is a report card?</p>
+								</div>
+								<div class="tab__content tab-content">
+									<p class="tab-content__text" v-html="school.aboutReportCard"></p>
+								</div>
+							</div>
+						</div>
 						<div class="about__tabs tabs-block">
 							<div class="tabs-block__item tab">
 								<div class="tab__top">
-									<div class="tab__icon">
+									<div class="tab__icon"> 
 										<img src="../assets/imgs/note-icon.png" alt="" />
 									</div>
 									<p class="tab__title">Our school in 100 words</p>
@@ -70,8 +85,8 @@
 									</div>
 								</div>
 								<div class="tab__content tab-content">
-									<h5 class="tab-content__title">{{school.descriptionTitle}}</h5>
-									<p class="tab-content__text">{{school.description}}</p>
+									<!-- <h5 class="tab-content__title" v-html="school.descriptionTitle"></h5> -->
+									<p class="tab-content__text" v-html="school.description"></p>
 								</div>
 							</div>
 							<div class="tabs-block__item tab">
@@ -85,17 +100,31 @@
 									</div>
 								</div>
 								<div class="tab__content tab-content">
-									<h5 class="tab-content__title">We want our pupils to become informed, articulate and empowered citizens.</h5>
 									<div class="swiper tab-slider">
 										<div class="swiper-wrapper tab-slider__wrapper">
-											<div v-for="view in school.tabs.schoolViewsUrls" class="swiper-slide tab-slider__slide">
-												<img :src="view" alt="" />
+											<div
+												v-for="view in school.tabs.schoolViews"
+												:key="view.id"
+												class="swiper-slide tab-slider__slide"
+												:class="{'img-slide': view.type === 'image', 'quote-slide': view.type === 'quote'}"
+												:style="view.bgcolor ? { background: view.bgcolor } : null">
+												<template v-if="view.type === 'image'">
+													<img :src="view.url" alt="" />
+												</template>
+												<template v-else-if="view.type === 'quote'">
+													<div class="description-block">
+														<img class="quote-icon" src="../assets/imgs/quote-icon.png" alt="" />
+														<p>{{ view.text }}</p>
+													</div>
+													<p><b>{{ view.author }}<b></p>
+												</template>
 											</div>
+
 											<!-- <div class="swiper-slide tab-slider__slide"><img src="../assets/imgs/school/15views.png" alt="" /></div>
 											<div class="swiper-slide tab-slider__slide"><img src="../assets/imgs/school/15views.png" alt="" /></div> -->
 										</div>
 									</div>
-									<a href="" class="tab-content__link"
+									<a class="tab-content__link" target="_blank" :href="`${school.ofstedLink}`"
 										><span>What does Ofsted say about our school?</span><img src="../assets/imgs/arrow-forward.png" alt=""
 									/></a>
 								</div>
@@ -111,10 +140,9 @@
 									</div>
 								</div>
 								<div class="tab__content tab-content">
-									<h5 class="tab-content__title">We want our pupils to become informed, articulate and empowered citizens.</h5>
 									<div class="swiper tab-slider">
 										<div class="swiper-wrapper tab-slider__wrapper">
-											<div v-for="image in school.tabs.schoolPhotosUrls" class="swiper-slide tab-slider__slide">
+											<div v-for="image in school.tabs.schoolPhotosUrls" class="swiper-slide tab-slider__slide img-slide">
 												<img :src="image" alt="" />
 											</div>
 											<!-- <div class="swiper-slide tab-slider__slide"><img src="../assets/imgs/school/10photos_1.png" alt="" /></div>
@@ -123,7 +151,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="tabs-block__item tab">
+							<!-- <div class="tabs-block__item tab">
 								<div class="tab__top">
 									<div class="tab__icon">
 										<img src="../assets/imgs/stars.png" alt="" />
@@ -134,7 +162,6 @@
 									</div>
 								</div>
 								<div class="tab__content tab-content">
-									<h5 class="tab-content__title">We want our pupils to become informed, articulate and empowered citizens.</h5>
 									<div class="tab-content__stats tab-stats">
 										<div class="tab-stats__item">
 											<img src="../assets/imgs/people-message-icon.png" alt="" />
@@ -164,23 +191,27 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="tabs-block__item tab">
 								<div class="tab__top">
 									<div class="tab__icon">
 										<img src="../assets/imgs/upgrade-icon.png" alt="" />
 									</div>
-									<p class="tab__title">Our school in 4 highlights</p>
+									<p class="tab__title">Our school in 5 headlines</p>
 									<div class="tab__close">
 										<img src="../assets/imgs/arrow-down.png" alt="" />
 									</div>
 								</div>
 								<div class="tab__content tab-content">
-									<h5 class="tab-content__title">We want our pupils to become informed, articulate and empowered citizens.</h5>
 									<div class="swiper tab-slider">
 										<div class="swiper-wrapper tab-slider__wrapper">
-											<div v-for="highlight in school.tabs.schoolHighlightsUrls" class="swiper-slide tab-slider__slide">
-												<img :src="highlight" alt="" />
+											<div
+												v-for="highlight in school.tabs.schoolHighlights"
+												class="swiper-slide tab-slider__slide text-slide headlines"
+												:style="`${highlight?.bgcolor ? `background: ${highlight.bgcolor}`:''} `">
+												<h3>{{highlight.title}}</h3>
+												<p v-html="highlight.description"></p>
+												<a :href="highlight.link">Learn more</a>
 											</div>
 											<!-- <div class="swiper-slide tab-slider__slide"></div>
 											<div class="swiper-slide tab-slider__slide"></div> -->
@@ -193,17 +224,20 @@
 									<div class="tab__icon">
 										<img src="../assets/imgs/note-icon.png" alt="" />
 									</div>
-									<p class="tab__title">Our school in 4 priorities</p>
+									<p class="tab__title">Our school in 3 priorities</p>
 									<div class="tab__close">
 										<img src="../assets/imgs/arrow-down.png" alt="" />
 									</div>
 								</div>
 								<div class="tab__content tab-content">
-									<h5 class="tab-content__title">We want our pupils to become informed, articulate and empowered citizens.</h5>
 									<div class="swiper tab-slider">
 										<div class="swiper-wrapper tab-slider__wrapper">
-											<div v-for="priority in school.tabs.schoolPrioritiesUrls" class="swiper-slide tab-slider__slide">
-												<img :src="priority" alt="" />
+											<div
+												v-for="priority in school.tabs.schoolPriorities"
+												class="swiper-slide tab-slider__slide text-slide priorities-slide"
+												:style="`${priority?.bgcolor ? `background: ${priority.bgcolor}`:''} `">
+												<h3 v-html="priority.title"></h3>
+												<p v-html="priority.description"></p>
 											</div>
 											<!-- <div class="swiper-slide tab-slider__slide"></div>
 											<div class="swiper-slide tab-slider__slide"></div> -->
@@ -220,7 +254,34 @@
 					<div class="navigation__content">
 						<h2 class="navigation__title">More about our school:</h2>
 						<div class="navigation__buttons">
-							<a :href="`/Camden/schoolContext/index.html?schoolId=${school.schoolId}`" class="navigation__button">
+							<a :href="`/schoolContext/index.html?schoolId=${school.schoolId}`" class="navigation__button">
+								<div class="button__icon"><img src="../assets/imgs/location.png" alt="" /></div>
+								<span class="button__text">School & community context</span>
+								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
+							</a>
+							<a :href="`/support/index.html?schoolId=${school.schoolId}`" class="navigation__button">
+								<div class="button__icon"><img src="../assets/imgs/satisfied-icon.png" alt="" /></div>
+								<span class="button__text">Pupil support & wellbeing</span>
+								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
+							</a>
+							<a :href="`/SEND/index.html?schoolId=${school.schoolId}`" class="navigation__button">
+								<div class="button__icon"><img src="../assets/imgs/holdingHands-icon.png" alt="" /></div>
+								<span class="button__text">SEND & Inclusion</span>
+								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
+							</a>
+							<a :href="`/achievement/index.html?schoolId=${school.schoolId}`" class="navigation__button">
+								<div class="button__icon"><img src="../assets/imgs/stats-4bars.png" alt="" /></div>
+								<span class="button__text">Pupils’ achievement</span>
+								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
+							</a>
+							<a :href="`/curriculum/index.html?schoolId=${school.schoolId}`" class="navigation__button">
+								<div class="button__icon"><img src="../assets/imgs/teaching-icon.png" alt="" /></div>
+								<span class="button__text">Curriculum, teaching & learning</span>
+								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
+							</a>
+
+							
+							<!-- <a :href="`/Camden/schoolContext/index.html?schoolId=${school.schoolId}`" class="navigation__button">
 								<div class="button__icon"><img src="../assets/imgs/location.png" alt="" /></div>
 								<span class="button__text">School & community context</span>
 								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
@@ -228,6 +289,11 @@
 							<a :href="`/Camden/support/index.html?schoolId=${school.schoolId}`" class="navigation__button">
 								<div class="button__icon"><img src="../assets/imgs/satisfied-icon.png" alt="" /></div>
 								<span class="button__text">Pupil support & wellbeing</span>
+								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
+							</a>
+							<a :href="`/Camden/SEND/index.html?schoolId=${school.schoolId}`" class="navigation__button">
+								<div class="button__icon"><img src="../assets/imgs/holdingHands-icon.png" alt="" /></div>
+								<span class="button__text">SEND & Inclusion</span>
 								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
 							</a>
 							<a :href="`/Camden/achievement/index.html?schoolId=${school.schoolId}`" class="navigation__button">
@@ -239,17 +305,17 @@
 								<div class="button__icon"><img src="../assets/imgs/teaching-icon.png" alt="" /></div>
 								<span class="button__text">Curriculum, teaching & learning</span>
 								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
-							</a>
+							</a> -->
 						</div>
 						<div class="navigation__link">
-							<img src="../assets/imgs/browser-black.png" alt="" /><a href="www.chrishatton.camden.sch.uk"
-								>www.chrishatton.camden.sch.uk</a
+							<img src="../assets/imgs/browser-black.png" alt="" /><a target="_blank" :href="`${school.websiteLink}`"
+								>{{school.websiteLink}}</a
 							>
 						</div>
 					</div>
 				</div>
 			</section>
-			<section class="verification">
+			<!-- <section class="verification">
 				<div class="verification__container">
 					<div class="verification__content">
 						<p>
@@ -258,7 +324,20 @@
 						</p>
 					</div>
 				</div>
-			</section>
+			</section> -->
 		</main>
+		<footer>
+			<div class="footer__container">
+				<div class="footer__content">
+					<div class="logo">
+						<a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
+						<!-- <a href="/Camden/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
+					</div>
+					<p class="text">
+						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden Learning as providing a true and fair picture of the school.
+					</p>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
