--- a/schoolContext/index.html
+++ b/schoolContext/index.html
@@ -8,8 +8,10 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
 			rel="stylesheet" />
+
 		<link rel="stylesheet" href="../assets/styles/global.css" />
 		<link rel="stylesheet" href="../assets/styles/components/header.css" />
+		<link rel="stylesheet" href="../assets/styles/components/footer.css" />
 		<link rel="stylesheet" href="../assets/styles/pages/schoolContext.css" />
 		<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
@@ -17,13 +19,14 @@
 		<script src="../assets/scripts/schoolContext.js" defer></script>
 		<title>School & Community Context</title>
 	</head>
-	<body id="schoolContext" class="schoolPage">
-		<header>
+	<body id="schoolContext" class="schoolPage" v-cloak>
+		<header class="header__school">
 			<div class="header__container">
 				<div class="header__content">
-					<div class="logo">
-						<a href="/Camden/index.html"><img src="../assets/imgs/logo.png" alt="logo" /></a>
+					<div class="school__logo">
+						<img :src="`${school.schoolLogo}`" alt="logo" />
 					</div>
+					<h1 class="school__name">{{school.schoolName}}</h1>
 				</div>
 			</div>
 		</header>
@@ -31,12 +34,16 @@
 			<section class="hero">
 				<div class="hero__container">
 					<div class="hero__content">
-						<a :href="`/Camden/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+						<a :href="`/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						>
+
+						<!-- <a :href="`/Camden/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
+						> -->
 						<h1 class="hero__title">School & Community Context</h1>
 						<div class="hero__navigation navigation-hero page-navigation">
-							<a href="#location-sector" class="page-navigation__button navigation-hero__button active">
+							<a href="#location-sector" class="page-navigation__button navigation-hero__button">
 								<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M12 19.5135C13.9564 17.7622 15.4535 16.0824 16.4913 14.474C17.5291 12.8657 18.048 11.457 18.048 10.2481C18.048 8.42498 17.4689 6.92627 16.3105 5.7519C15.1522 4.57753 13.7153 3.99035 12 3.99035C10.2846 3.99035 8.84771 4.57753 7.68938 5.7519C6.53105 6.92627 5.95188 8.42498 5.95188 10.2481C5.95188 11.457 6.47079 12.8657 7.5086 14.474C8.54644 16.0824 10.0436 17.7622 12 19.5135ZM12 20.9403C11.8051 20.9403 11.6102 20.9067 11.4154 20.8394C11.2205 20.7721 11.0442 20.6679 10.8865 20.5269C9.98909 19.7 9.14935 18.8484 8.3673 17.9721C7.58525 17.0958 6.90545 16.2199 6.32788 15.3442C5.75031 14.4686 5.29326 13.6006 4.95673 12.7404C4.62018 11.8801 4.4519 11.0493 4.4519 10.2481C4.4519 7.94038 5.19838 6.07213 6.69133 4.64328C8.18426 3.21443 9.9538 2.5 12 2.5C14.0461 2.5 15.8156 3.21443 17.3086 4.64328C18.8015 6.07213 19.548 7.94038 19.548 10.2481C19.548 11.0493 19.3797 11.8785 19.0432 12.7356C18.7066 13.5926 18.2512 14.4606 17.6768 15.3394C17.1025 16.2183 16.4243 17.0942 15.6422 17.9673C14.8602 18.8404 14.0204 19.6903 13.123 20.5173C12.9676 20.6583 12.791 20.7641 12.5933 20.8346C12.3955 20.9051 12.1977 20.9403 12 20.9403ZM12.0017 11.8654C12.4992 11.8654 12.9246 11.6882 13.2778 11.3339C13.631 10.9795 13.8076 10.5536 13.8076 10.056C13.8076 9.55839 13.6305 9.133 13.2761 8.7798C12.9218 8.4266 12.4958 8.25 11.9983 8.25C11.5007 8.25 11.0753 8.42717 10.7221 8.7815C10.3689 9.13583 10.1923 9.56179 10.1923 10.0594C10.1923 10.557 10.3694 10.9824 10.7238 11.3356C11.0781 11.6888 11.5041 11.8654 12.0017 11.8654Z"
@@ -86,11 +93,11 @@
 						<div class="location" id="location-sector">
 							<div class="location__header">
 								<h2 class="context__title">Location</h2>
-								<a class="link" :href="school.websiteLink"
+								<!-- <a class="link" :href="school.websiteLink"
 									><span>View school details</span> <img src="../assets/imgs/arrow-outward.png" alt="arrow"
-								/></a>
+								/></a> -->
 							</div>
-							<p class="location__address">{{school.address}}</p>
+							<p class="location__address">{{school.address}} {{school.postCode}}</p>
 							<div class="location__map" id="map">
 								<!-- <iframe
 									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1243.0925765114478!2d-0.09896219758077963!3d51.45475690704054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604746be66215%3A0xec64c8e179cb9aee!2sHerne%20Hill%20School!5e0!3m2!1sen!2suk!4v1725605687032!5m2!1sen!2suk"
@@ -99,14 +106,14 @@
 									referrerpolicy="no-referrer-when-downgrade">
 								</iframe> -->
 							</div>
-							<div class="toggle-switch__block location__toggler-block">
+							<!-- <div class="toggle-switch__block location__toggler-block">
 								<div class="toggle-switch">
 									<input type="checkbox" id="switch1" />
 									<label for="switch1" class="toggle-switch__slider"></label>
 								</div>
 								<p>Show Previous Year Catchment*</p>
-							</div>
-							<label for="location-input">Travel times from you</label>
+							</div> -->
+							<!-- <label for="location-input">Travel times from you</label>
 							<div class="location-input__wrapper">
 								<input type="text" id="location-input" placeholder="SE1 0LH" />
 								<div class="location__input-button">Edit Postcode</div>
@@ -119,7 +126,7 @@
 								</div>
 								<div class="travel-time__item"><img src="../assets/imgs/walking-icon.png" alt="" /><span>24 min</span></div>
 								<div class="travel-time__item"><img src="../assets/imgs/bike-icon.png" alt="" /><span>24 min</span></div>
-							</div>
+							</div> -->
 						</div>
 						<div class="facilities" id="facilities-sector">
 							<h2 class="context__title facilities__title">What facilities do we have?</h2>
@@ -182,27 +189,31 @@
 							</div>
 							<div v-if="currentInfoBlock == 1" class="statistics__block statistics-block">
 								<div class="statistics-block__sector stats-sector">
+									<p class="stats-sector__name">Number of Forms of Entry</p>
+									<p class="stats-sector__description">{{school.entryForms}}</p>
+								</div>
+								<div class="statistics-block__sector stats-sector">
 									<p class="stats-sector__name">Pupil numbers</p>
 									<p class="stats-sector__description">{{school.statistics.pupilsNum}}</p>
-									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
+									<!-- <div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
 										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>354</span></p>
 										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>324</span></p>
-									</div>
+									</div> -->
 								</div>
 								<div class="statistics-block__sector stats-sector">
 									<p class="stats-sector__name">% Disadvantaged pupils</p>
 									<p class="stats-sector__description">{{school.statistics.disadvantagedPupilsPercent}}%</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>23%</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>27%</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>43%</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>26%</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
 									<p class="stats-sector__name">% English as an additional language</p>
 									<p class="stats-sector__description">{{school.statistics.englishAdditionalLangPercent}}%</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>25</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>32</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>57%</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>49%</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
@@ -221,8 +232,8 @@
 									<p class="stats-sector__name">% BME</p>
 									<p class="stats-sector__description">{{school.statistics.BMEPercent}}%</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>35%</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>40%</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>76%</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>74%</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
@@ -249,8 +260,8 @@
 									<p class="stats-sector__name">Special Educational Needs & Disabilities (SEND)</p>
 									<p class="stats-sector__description">{{school.statistics.SENDPercent}}%</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>9%</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>16%</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>16%</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>15%</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
@@ -275,16 +286,16 @@
 									<p class="stats-sector__name">Pupil adult ratio</p>
 									<p class="stats-sector__description">{{school.statistics.pupilAdultRatio}}</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>354</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>324</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>9.4</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>10.8</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
 									<p class="stats-sector__name">% of teachers with Qualified Teacher Status</p>
 									<p class="stats-sector__description">{{school.statistics.qualifiedTeachersPercent}}</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>23%</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>27%</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>98%</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>96%</span></p>
 									</div>
 								</div>
 							</div>
@@ -293,28 +304,41 @@
 									<p class="stats-sector__name">Financial reserves</p>
 									<p class="stats-sector__description">£{{school.statistics.financialReserves}}</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>354</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>324</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>£170,500</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>£144,100</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
 									<p class="stats-sector__name">Change in reserves in last 12 months</p>
 									<p class="stats-sector__description">-£{{school.statistics.changeYearReserves}}</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>23%</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>27%</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>-£2,500</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>-£41,700</span></p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="admissions-process" id="admissions-sector">
 							<h2 class="context__title">What is the admissions process for our school?</h2>
-							<p>{{school.admissionProcess}}</p>
-							<a href="https://www.camden.gov.uk/home">View Camden admissions website</a>
+							<p v-html="school?.admissionProcess"></p>
+							<!-- <a href="https://www.camden.gov.uk/school-admissions">View Camden admissions website</a> -->
 						</div>
 					</div>
 				</div>
 			</section>
 		</main>
+		<footer>
+			<div class="footer__container">
+				<div class="footer__content">
+					<div class="logo">
+						<a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
+						<!-- <a href="/Camden/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
+					</div>
+					<p class="text">
+						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden Learning as providing a true and fair picture of the school.
+					</p>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
