--- a/support/index.html
+++ b/support/index.html
@@ -8,21 +8,24 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
 			rel="stylesheet" />
+
 		<link rel="stylesheet" href="../assets/styles/global.css" />
 		<link rel="stylesheet" href="../assets/styles/components/header.css" />
+		<link rel="stylesheet" href="../assets/styles/components/footer.css" />
 		<link rel="stylesheet" href="../assets/styles/pages/support.css" />
 		<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 		<script type="module" src="./../assets/scripts/supportPage.js" defer></script>
 
 		<title>Pupil Support & Wellbeing</title>
 	</head>
-	<body id="supportPage" class="Curriculum">
-		<header>
+	<body id="supportPage" class="Curriculum" v-cloak>
+		<header class="header__school">
 			<div class="header__container">
 				<div class="header__content">
-					<div class="logo">
-						<a href="/index.html"><img src="../assets/imgs/logo.png" alt="logo" /></a>
+					<div class="school__logo">
+						<img :src="`${school.schoolLogo}`" alt="logo" />
 					</div>
+					<h1 class="school__name">{{school.schoolName}}</h1>
 				</div>
 			</div>
 		</header>
@@ -33,9 +36,13 @@
 						<a :href="`/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						>
+
+						<!-- <a :href="`/Camden/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
+						> -->
 						<h1 class="hero__title">Pupil Support & Wellbeing</h1>
 						<div class="hero__navigation page-navigation">
-							<a href="#happiness-sector" class="page-navigation__button active">
+							<a href="#happiness-sector" class="page-navigation__button">
 								<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M12.0043 17.1923C12.8527 17.1923 13.6535 17.0006 14.4067 16.6173C15.1599 16.2339 15.7686 15.6884 16.2327 14.9807C16.3775 14.7615 16.3945 14.5432 16.2836 14.3259C16.1727 14.1086 15.9961 14 15.7538 14C15.6547 14 15.5648 14.0227 15.4843 14.0683C15.4037 14.1138 15.3365 14.1788 15.2827 14.2634C14.8993 14.8057 14.4211 15.2307 13.8481 15.5384C13.275 15.8461 12.659 16 12 16C11.341 16 10.725 15.8461 10.1519 15.5384C9.57882 15.2307 9.10061 14.8057 8.71728 14.2634C8.65318 14.1788 8.58085 14.1138 8.5003 14.0683C8.41975 14.0227 8.3299 14 8.23075 14C7.98845 14 7.81185 14.1045 7.70095 14.3134C7.59005 14.5224 7.60704 14.7346 7.75193 14.95C8.21603 15.6679 8.82468 16.2211 9.57788 16.6096C10.3311 16.998 11.1399 17.1923 12.0043 17.1923ZM15.4061 10.8077C15.7699 10.8077 16.0785 10.6803 16.3317 10.4256C16.5849 10.1709 16.7115 9.86158 16.7115 9.4977C16.7115 9.13383 16.5841 8.8253 16.3294 8.5721C16.0747 8.3189 15.7654 8.1923 15.4016 8.1923C15.0377 8.1923 14.7292 8.31966 14.476 8.57438C14.2227 8.82908 14.0961 9.13837 14.0961 9.50225C14.0961 9.86612 14.2235 10.1747 14.4782 10.4279C14.7329 10.6811 15.0422 10.8077 15.4061 10.8077ZM8.5984 10.8077C8.96227 10.8077 9.2708 10.6803 9.524 10.4256C9.77722 10.1709 9.90383 9.86158 9.90383 9.4977C9.90383 9.13383 9.77647 8.8253 9.52175 8.5721C9.26703 8.3189 8.95774 8.1923 8.59388 8.1923C8.23001 8.1923 7.92147 8.31966 7.66825 8.57438C7.41505 8.82908 7.28845 9.13837 7.28845 9.50225C7.28845 9.86612 7.41581 10.1747 7.67053 10.4279C7.92524 10.6811 8.23453 10.8077 8.5984 10.8077ZM12.0016 21.5C10.6877 21.5 9.45268 21.2506 8.29655 20.752C7.1404 20.2533 6.13472 19.5765 5.2795 18.7217C4.42427 17.8669 3.74721 16.8616 3.24833 15.706C2.74944 14.5504 2.5 13.3156 2.5 12.0017C2.5 10.6877 2.74933 9.45268 3.248 8.29655C3.74667 7.1404 4.42342 6.13472 5.27825 5.2795C6.1331 4.42427 7.13834 3.74721 8.29398 3.24833C9.44959 2.74944 10.6844 2.5 11.9983 2.5C13.3122 2.5 14.5473 2.74933 15.7034 3.248C16.8596 3.74667 17.8652 4.42342 18.7205 5.27825C19.5757 6.1331 20.2527 7.13834 20.7516 8.29398C21.2505 9.44959 21.5 10.6844 21.5 11.9983C21.5 13.3122 21.2506 14.5473 20.752 15.7034C20.2533 16.8596 19.5765 17.8652 18.7217 18.7205C17.8669 19.5757 16.8616 20.2527 15.706 20.7516C14.5504 21.2505 13.3156 21.5 12.0016 21.5ZM12 20C14.2333 20 16.125 19.225 17.675 17.675C19.225 16.125 20 14.2333 20 12C20 9.76664 19.225 7.87498 17.675 6.32498C16.125 4.77498 14.2333 3.99998 12 3.99998C9.76664 3.99998 7.87498 4.77498 6.32498 6.32498C4.77498 7.87498 3.99998 9.76664 3.99998 12C3.99998 14.2333 4.77498 16.125 6.32498 17.675C7.87498 19.225 9.76664 20 12 20Z"
@@ -51,14 +58,14 @@
 								</svg>
 								<span>Bullying</span>
 							</a>
-							<a href="#support-sector" class="page-navigation__button">
+							<!-- <a href="#support-sector" class="page-navigation__button">
 								<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M12.0016 21.5C10.6877 21.5 9.45268 21.2506 8.29655 20.752C7.1404 20.2533 6.13472 19.5765 5.2795 18.7217C4.42427 17.8669 3.74721 16.8616 3.24833 15.706C2.74944 14.5504 2.5 13.3156 2.5 12.0017C2.5 10.6877 2.74933 9.45268 3.248 8.29655C3.74667 7.1404 4.42342 6.13472 5.27825 5.2795C6.1331 4.42427 7.13834 3.74721 8.29398 3.24833C9.44959 2.74944 10.6844 2.5 11.9983 2.5C13.3122 2.5 14.5473 2.74933 15.7034 3.248C16.8596 3.74667 17.8652 4.42342 18.7205 5.27825C19.5757 6.1331 20.2527 7.13834 20.7516 8.29398C21.2505 9.44959 21.5 10.6844 21.5 11.9983C21.5 13.3122 21.2506 14.5473 20.752 15.7034C20.2533 16.8596 19.5765 17.8652 18.7217 18.7205C17.8669 19.5757 16.8616 20.2527 15.706 20.7516C14.5504 21.2505 13.3156 21.5 12.0016 21.5ZM9.09998 19.45L10.5692 16.1038C9.94504 15.8834 9.40631 15.5417 8.95303 15.0789C8.49974 14.616 8.15387 14.073 7.9154 13.45L4.53075 14.85C4.92048 15.9166 5.51535 16.85 6.31535 17.65C7.11535 18.45 8.04356 19.05 9.09998 19.45ZM7.9154 10.55C8.14103 9.92692 8.48238 9.38814 8.93943 8.93368C9.39648 8.47919 9.93333 8.13977 10.55 7.9154L9.14998 4.53075C8.07689 4.93715 7.14035 5.54035 6.34035 6.34035C5.54035 7.14035 4.93715 8.07689 4.53075 9.14998L7.9154 10.55ZM11.9977 14.8461C12.7877 14.8461 13.4599 14.5696 14.0144 14.0167C14.5689 13.4637 14.8461 12.7922 14.8461 12.0023C14.8461 11.2123 14.5696 10.5401 14.0167 9.98555C13.4637 9.43107 12.7922 9.15383 12.0023 9.15383C11.2123 9.15383 10.5401 9.43032 9.98555 9.9833C9.43107 10.5363 9.15383 11.2077 9.15383 11.9977C9.15383 12.7877 9.43032 13.4599 9.9833 14.0144C10.5363 14.5689 11.2078 14.8461 11.9977 14.8461ZM14.9 19.45C15.95 19.05 16.8708 18.4541 17.6625 17.6625C18.4541 16.8708 19.05 15.95 19.45 14.9L16.1038 13.4307C15.8922 14.0474 15.557 14.5826 15.098 15.0365C14.6391 15.4903 14.1064 15.8397 13.5 16.0846L14.9 19.45ZM16.0846 10.5L19.45 9.09998C19.05 8.04998 18.4541 7.12914 17.6625 6.33748C16.8708 5.54581 15.95 4.94998 14.9 4.54998L13.5 7.94618C14.0935 8.17694 14.6115 8.51284 15.0538 8.95385C15.4961 9.39487 15.8397 9.91025 16.0846 10.5Z"
 										fill="#000000" />
 								</svg>
 								<span>SEND Support</span>
-							</a>
+							</a> -->
 							<a href="#attendance-sector" class="page-navigation__button">
 								<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
@@ -76,16 +83,16 @@
 					<div class="about__content">
 						<div class="about-sector" id="happiness-sector">
 							<h2 class="about__title">How do we ensure your child is safe and happy?</h2>
-							<p class="about__text">{{school.support.childSafetyAndHappiness}}</p>
-							<a class="about__link" href="">View our annual safeguarding audit statement</a>
-							<a class="about__link" href="">View our pupil wellbeing policy</a>
+							<p class="about__text" v-html="school.support?.childSafetyAndHappiness"></p>
+							<!-- <a class="about__link" href="">View our annual safeguarding audit statement</a>
+							<a class="about__link" href="">View our pupil wellbeing policy</a> -->
 						</div>
 						<div class="about-sector" id="bullying-sector">
 							<h2 class="about__title">How do we address bullying?</h2>
-							<p class="about__text">{{school.support.bullingProtection}}</p>
-							<a class="about__link" href="">View our behaviour policy</a>
+							<p class="about__text" v-html="school.support?.bullyingProtection"></p>
+							<!-- <a class="about__link" href="">View our behaviour policy</a> -->
 						</div>
-						<div class="about-sector" id="support-sector">
+						<!-- <div class="about-sector" id="support-sector">
 							<h2 class="about__title">
 								How do we support children with <span class="underlined">Special educational needs & disabilities (SEND)?</span>
 							</h2>
@@ -95,17 +102,14 @@
 								<div v-for="SEND in school.statistics.specificSEND" class="info-tag">
 									<span>{{SEND}}</span>
 								</div>
-								<!-- <div class="info-tag"><span>Social, Emotional and Mental Health</span></div> -->
-								<!-- <div class="info-tag"><span>Hearing Impairment</span></div> -->
-								<!-- <div class="info-tag"><span>Visual Impairment</span></div> -->
-								<!-- <div class="info-tag"><span>Moderate Learning Difficulty</span></div> -->
+								 
 							</div>
 							<a class="about__link" href="">View Camden SEND local offer</a>
-						</div>
+						</div> -->
 						<div class="about-sector" id="attendance-sector">
 							<h2 class="about__title">How do we ensure good pupil attendance?</h2>
-							<p class="about__text">{{school.support.attendanceManagement}}</p>
-							<p class="about__text underlined">2022/23 Statistics</p>
+							<p class="about__text" v-html="school.support?.attendanceManagement"></p>
+							<p class="about__text underlined">2023/24 Statistics</p>
 							<div class="info-tags__block">
 								<div class="info-tag"><span>{{school.statistics.absencePercent}}% Absence</span></div>
 								<div class="info-tag"><span>{{school.statistics.persistentAbsenteesPercent}}% Persistent absentees</span></div>
@@ -115,5 +119,18 @@
 				</div>
 			</section>
 		</main>
+		<footer>
+			<div class="footer__container">
+				<div class="footer__content">
+					<div class="logo">
+						<a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
+						<!-- <a href="/Camden/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
+					</div>
+					<p class="text">
+						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden Learning as providing a true and fair picture of the school.
+					</p>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
